Fix summary blur tile flickering

--- a/src/components/text/Text.css
+++ b/src/components/text/Text.css
@@ -10,6 +10,11 @@
   position: relative;
 }
 
+.text::selection {
+  background-color: var(--colors-secondary);
+  color: black;
+}
+
 .typewriter {
   font-family: monospace;
   font-weight: bold;
